--- a/consumoApi/package.json
+++ b/consumoApi/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.6.5"
+  },
+  "dependencies": {
+    "axios": "^0.27.2"
   }
 }
